# example-rust-gtk4

./: Cargo.toml  README.md  gauges.xml
examples/: dial.rs  drawing_area.rs  fancy_gauge.rs  layered.rs  range.rs  simple_gauge.rs
src/: dash.glade  gauge.glade  layered_gauge.rs  lib.rs  main.rs  painted_gauge.glade  painted_gauge.rs  rendered_gauge.glade  rendered_gauge.rs  simple_gauge.glade
src/parts/: mod.rs  simple_dial.rs  simple_needle.rs
src/simple_gauge/: imp.rs  mod.rs
