[package]
name = "example-rust-gtk4"
version = "0.1.0"
edition = "2021"

[lib]
name = "gauges"
crate-type = ["lib", "cdylib"]

[dependencies.gtk]
package = "gtk4"
version = "0.4"


[dependencies.relm4]
version = "0.4"
features = ["macros"]

[dependencies.rsvg]
package = "librsvg"
git = "https://gitlab.gnome.org/gnome/librsvg"

[dependencies]
notify = "5.0.0-pre.16"
cairo-rs = "0.4.1"
once_cell = "1"
anyhow = "1"


